// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders all appearances 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0 !important;
}

.emotion-4 > div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-1 {
  border-color: var(--themeBorder,#DADDE2);
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 999px;
  position: relative;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
}

<RadioInput
  appearance="standard"
  id="defaultId"
  inputLabel="Sample label"
  name="appearanceTest"
  value="default"
>
  <ForwardRef
    appearance="standard"
    id="defaultId"
    inputLabel="Sample label"
    inputType="radio"
    name="appearanceTest"
    showInputLabel={true}
    value="default"
    vertAlign="center"
  >
    <FormFieldWrapper
      id="defaultId"
    >
      <div
        className="emotion-5"
        data-cy="radioInput"
      >
        <label
          className="emotion-4"
          htmlFor="defaultId"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-1"
            >
              <input
                aria-describedby=""
                aria-invalid={false}
                className="emotion-0"
                data-cy="radioInput-input"
                id="defaultId"
                name="appearanceTest"
                onBlur={[Function]}
                onFocus={[Function]}
                type="radio"
                value="default"
              />
            </div>
          </div>
          <div
            className="emotion-3"
          >
            Sample label
          </div>
        </label>
      </div>
    </FormFieldWrapper>
  </ForwardRef>
</RadioInput>
`;

exports[`RadioInput renders all appearances 2`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0 !important;
}

.emotion-4 > div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-1 {
  border-color: var(--themeBorder,#DADDE2);
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 999px;
  position: relative;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  color: var(--themeError,#EB293A);
  fill: var(--themeError,#EB293A);
}

<RadioInput
  appearance="error"
  id="defaultId"
  inputLabel="Sample label"
  name="appearanceTest"
  value="default"
>
  <ForwardRef
    appearance="error"
    id="defaultId"
    inputLabel="Sample label"
    inputType="radio"
    name="appearanceTest"
    showInputLabel={true}
    value="default"
    vertAlign="center"
  >
    <FormFieldWrapper
      id="defaultId"
    >
      <div
        className="emotion-5"
        data-cy="radioInput radioInput.error"
      >
        <label
          className="emotion-4"
          htmlFor="defaultId"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-1"
            >
              <input
                aria-describedby=""
                aria-invalid={false}
                className="emotion-0"
                data-cy="radioInput-input radioInput-input.error"
                id="defaultId"
                name="appearanceTest"
                onBlur={[Function]}
                onFocus={[Function]}
                type="radio"
                value="default"
              />
            </div>
          </div>
          <div
            className="emotion-3"
          >
            Sample label
          </div>
        </label>
      </div>
    </FormFieldWrapper>
  </ForwardRef>
</RadioInput>
`;

exports[`RadioInput renders all appearances 3`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0 !important;
}

.emotion-4 > div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-1 {
  border-color: var(--themeBorder,#DADDE2);
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 999px;
  position: relative;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  color: var(--themeSuccess,#14C684);
  fill: var(--themeSuccess,#14C684);
}

<RadioInput
  appearance="success"
  id="defaultId"
  inputLabel="Sample label"
  name="appearanceTest"
  value="default"
>
  <ForwardRef
    appearance="success"
    id="defaultId"
    inputLabel="Sample label"
    inputType="radio"
    name="appearanceTest"
    showInputLabel={true}
    value="default"
    vertAlign="center"
  >
    <FormFieldWrapper
      id="defaultId"
    >
      <div
        className="emotion-5"
        data-cy="radioInput radioInput.success"
      >
        <label
          className="emotion-4"
          htmlFor="defaultId"
        >
          <div
            className="emotion-2"
          >
            <div
              className="emotion-1"
            >
              <input
                aria-describedby=""
                aria-invalid={false}
                className="emotion-0"
                data-cy="radioInput-input radioInput-input.success"
                id="defaultId"
                name="appearanceTest"
                onBlur={[Function]}
                onFocus={[Function]}
                type="radio"
                value="default"
              />
            </div>
          </div>
          <div
            className="emotion-3"
          >
            Sample label
          </div>
        </label>
      </div>
    </FormFieldWrapper>
  </ForwardRef>
</RadioInput>
`;
